infra/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rush-web
  namespace: rush
spec:
  selector:
    app: rush-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
